[package]
name = "persister"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow = "45.0.0"
futures = "0.3.28"
parquet = "45.0.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["full"] }
