[package]
name = "persister"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.26"
duckdb = { version = "0.8.1", features = ["bundled"] }
futures = "0.3.28"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["full"] }
