[package]
name = "persister"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono = "0.4.26"
csv = "1.2.2"
duckdb = { version = "0.8.1", features = ["bundled"] }
futures = "0.3.28"
itertools = "0.11.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["full"] }
