[package]
name = "querier"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
actix-web = "4"
bytes = "1.4.0"
chrono = "0.4.26"
csv = "1.2.2"
datafusion = "28.0.0"
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.20"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio"] }
